// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal/DialogModal Icon + one action 1`] = `
.c8 {
  position: relative;
  display: inline-block;
}

.c8 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c8 .appear-enter {
  opacity: 0;
}

.c8 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c8 .appear-exit {
  opacity: 1;
}

.c8 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > .thumbnail {
  margin-bottom: 24px;
}

.c5 > .description,
.c5 > .info {
  margin-top: 16px;
}

.c5 > .buttons {
  margin-top: 24px;
}

.c5 > .buttons > * {
  margin: 0 8px;
}

.c5 .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c3 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 560px;
  padding: 32px 56px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

.c0 {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.32);
}

.c2 {
  max-height: 100%;
  max-width: 100%;
  min-width: 200px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-start",
      "opacity": 0,
      "position": "fixed",
    }
  }
>
  <div
    className="overlay c1"
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    style={
      Object {
        "maxHeight": "100%",
        "transform": "translate3D(0, 50px, 0)",
      }
    }
  >
    <div
      className="card c2 c3"
      overflow="visible"
      width="560px"
    >
      <div
        className="content c4"
      >
        <div
          className="empty-state c5"
        >
          <div
            className="icon"
          >
            <i
              className="wg-alert"
            />
          </div>
          <div
            className="title c6"
            size={24}
            type="#2f313a"
          >
            Dialog Modal Title
          </div>
          <div
            className="description c7"
            size={18}
            type="#59636f"
          >
            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
          </div>
          <div
            className="buttons"
          >
            <div
              className="c8"
            >
              <button
                className="wrapped c9"
                disabled={false}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                size="MEDIUM"
                type="SECONDARY"
              >
                Primary Action
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/DialogModal Image + two actions 1`] = `
.c9 {
  position: relative;
  display: inline-block;
}

.c9 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c9 .appear-enter {
  opacity: 0;
}

.c9 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c9 .appear-exit {
  opacity: 1;
}

.c9 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c11 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c11:focus {
  box-shadow: none;
}

.c11:hover .icon,
.c11:focus .icon {
  color: white;
}

.c11:hover {
  background-color: #2980b9;
}

.c11:focus {
  background-color: #2980b9;
}

.c11:disabled,
.c11:disabled .icon,
.c11:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c11:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10 > .icon {
  color: rgba(0,0,0,0.32);
}

.c10:hover,
.c10:focus {
  color: #3498db;
  border-color: #3498db;
}

.c10:hover > .icon,
.c10:focus > .icon {
  color: #3498db;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c6 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 72px;
  min-height: 72px;
  width: 72px;
  height: 72px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/200?image=0);
  background-size: cover;
  background-position: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > .thumbnail {
  margin-bottom: 24px;
}

.c5 > .description,
.c5 > .info {
  margin-top: 16px;
}

.c5 > .buttons {
  margin-top: 24px;
}

.c5 > .buttons > * {
  margin: 0 8px;
}

.c5 .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c3 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 700px;
  padding: 32px 56px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

.c0 {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.32);
}

.c2 {
  max-height: 100%;
  max-width: 100%;
  min-width: 200px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-start",
      "opacity": 0,
      "position": "fixed",
    }
  }
>
  <div
    className="overlay c1"
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    style={
      Object {
        "maxHeight": "100%",
        "transform": "translate3D(0, 50px, 0)",
      }
    }
  >
    <div
      className="card c2 c3"
      overflow="visible"
      width="700px"
    >
      <div
        className="content c4"
      >
        <div
          className="empty-state c5"
        >
          <div
            className="thumbnail c6"
            size={72}
            src="https://picsum.photos/200?image=0"
          />
          <div
            className="title c7"
            size={24}
            type="#2f313a"
          >
            Dialog Modal Title
          </div>
          <div
            className="description c8"
            size={18}
            type="#59636f"
          >
            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
          </div>
          <div
            className="buttons"
          >
            <div
              className="c9"
            >
              <button
                className="wrapped c10"
                disabled={false}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                size="MEDIUM"
                type="NEUTRAL"
              >
                Secondary Action
              </button>
            </div>
            <div
              className="c9"
            >
              <button
                className="wrapped c11"
                disabled={false}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                size="MEDIUM"
                type="SECONDARY"
              >
                Primary Action
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/DialogModal With state 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Do Something
  </button>
</div>
`;
